Fixed whitespace issue in feature key/value pop up.

--- a/src/common/featuremanager/style/featuremanager.less
+++ b/src/common/featuremanager/style/featuremanager.less
@@ -109,6 +109,7 @@ span.row {
 .info-box-attribute-value {
   display: block;
   //width: 190px;
+  min-height: 21px;
   max-width: 390px;
   margin: 0;
   padding: 0 0 7px;
